...
                    onClick = onVerSolicitudesClick,
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(16.dp)
                        .navigationBarsPadding()
                ) {
                    Text("Mis Solicitudes")
                }
            }
        }
    ) { padding ->
        LazyColumn(
            modifier = Modifier
...
